bug(refactor):refactor codes and improved validations
